add new 2 section

--- a/index.html
+++ b/index.html
@@ -6,13 +6,88 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Misson 2022</title>
+
+    <!-- Google Font link -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <!-- Css -->
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    <main>
+        <div class="container">
+            <!-- Start Hero section -->
+            <header>
+                <div class="header-title">
+                    <h1>Stay Focused on <br>
+                        <span>Mission 2022</span>
+                    </h1>
+                    <p>A JavaScript Developer is accountable for implementing and developing the front-end logic
+                        that defines the visual elements of the web applications. The developer is responsible for
+                        connecting this with back-end services. A well-</p>
+                    <a class="btn" href="https://www.linkedin.com/in/saidur09/">Explore Now</a>
+                </div>
+                <div class="header-img">
+                    <img src="images/person/person-2.png" alt="">
+                </div>
+            </header>
+        </div>
+        <!-- End Hero Section -->
 
-    <h1>Hello</h1>
+
+        <!-- Start Mission 2022-->
+        <div class="container">
+            <section class="mission2022">
+                <h1>My Mission in <span>2022</span> </h1>
+
+                <div class="target">
+                    <div class="misson" id="misson">
+                        <img src="images/illustrators/illustrator-1.png" alt="">
+                        <h3>Mission</h3>
+                        <p>A JavaScript Developer is accountable for implementing and developing the front-end logic
+                            that defines the visual elements of the web applications. The developer is responsible for
+                            connecting this with back-end services. A well-</p>
+                    </div>
+                    <div class="misson" id="vission">
+                        <img src="images/illustrators/illustrator-2.png" alt="">
+                        <h3>Vission</h3>
+                        <p>A JavaScript Developer is accountable for implementing and developing the front-end logic
+                            that defines the visual elements of the web applications. The developer is responsible for
+                            connecting this with back-end services. A well-</p>
+                    </div>
+                    <div class="misson" id="goals">
+                        <img src="images/illustrators/illustrator-3.png" alt="">
+                        <h3>Goals</h3>
+                        <p>A JavaScript Developer is accountable for implementing and developing the front-end logic
+                            that defines the visual elements of the web applications. The developer is responsible for
+                            connecting this with back-end services. A well-</p>
+                    </div>
+                </div>
+            </section>
+        </div>
+        <!-- End Mission 2022-->
+
+        <!-- Start coding Section -->
+        <div class="container">
+            <section id="coding">
+                <div class="coding-img">
+                    <img src="images/pictures/coding.png" alt="">
+                </div>
+                <div class="coding-info">
+                    <h2>Develop Without Limits</h2>
+                    <p>A JavaScript Developer is accountable for implementing and developing the front-end logic
+                        that defines the visual elements of the web applications. The developer is responsible for
+                        connecting this with back-end services. A well-</p>
+                    <a class="btn" href="https://www.linkedin.com/in/saidur09/">Read the Documentation</a>
+                </div>
+            </section>
+        </div>
+        <!-- End coding Section -->
 
 
+    </main>
 </body>
 
 </html>
