--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;500;600;700&display=swap" rel="stylesheet">
+
+    <!-- 2nd Font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;500;600;700&family=Yellowtail&display=swap"
+        rel="stylesheet">
     <!-- Css -->
     <link rel="stylesheet" href="style.css">
 </head>
@@ -28,9 +34,11 @@
                         that defines the visual elements of the web applications. The developer is responsible for
                         connecting this with back-end services. A well-</p>
                     <a class="btn" href="https://www.linkedin.com/in/saidur09/">Explore Now</a>
+
+                    <p>Scroll down to explore more about us</p>
                 </div>
                 <div class="header-img">
-                    <img src="images/person/person-2.png" alt="">
+                    <img src="images/person/person-0.png" alt="">
                 </div>
             </header>
         </div>
@@ -70,24 +78,97 @@
         <!-- End Mission 2022-->
 
         <!-- Start coding Section -->
-        <div class="container">
-            <section id="coding">
-                <div class="coding-img">
-                    <img src="images/pictures/coding.png" alt="">
+
+        <section id="codeing-main">
+            <div class="container">
+                <div class="half-cont">
+                    <div class="half-width">
+                        <img src="images/pictures/coding.png" alt="">
+                    </div>
+
+                    <div class="half-width half-info">
+                        <h2>Develop <br>
+                            <span>Without Limits</span>
+                        </h2>
+                        <p>A JavaScript Developer is accountable for implementing and developing the front-end logic
+                            that defines the visual elements of the web applications. The developer is responsible
+                            for
+                            connecting this with back-end services. A well-</p>
+                        <a class="btn" href="https://www.linkedin.com/in/saidur09/">Read the Documentation</a>
+                    </div>
                 </div>
-                <div class="coding-info">
-                    <h2>Develop Without Limits</h2>
-                    <p>A JavaScript Developer is accountable for implementing and developing the front-end logic
-                        that defines the visual elements of the web applications. The developer is responsible for
-                        connecting this with back-end services. A well-</p>
-                    <a class="btn" href="https://www.linkedin.com/in/saidur09/">Read the Documentation</a>
-                </div>
-            </section>
-        </div>
+            </div>
+        </section>
+
         <!-- End coding Section -->
 
 
+
+        <!-- Start Community Section -->
+        <section id="community">
+            <div class="container">
+                <div class="community-main">
+                    <div class="community-info">
+                        <h1>Know our <br>
+                            Global Community
+                        </h1>
+                        <p>How much does a MERN Stack Developer make? The national average salary for a MERN Stack
+                            Developer is $76,284 in United States. Filter by location to see MERN Stack Developer
+                            salaries in your area. Salary estimates are based on 21,030 salaries submitted anonymously
+                            to Glassdoor by MERN Stack Developer employees.</p>
+                        <a class="btn" href="https://www.linkedin.com/in/saidur09/">Read the Documentation</a>
+                    </div>
+                    <div class="community-img">
+                        <img src="images/pictures/project.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- End Community Section -->
+
+        <!-- Start Project section -->
+        <section id="project">
+            <div class="container">
+                <h1>Recent Projects</h1>
+                <div class="project-main">
+                    <div class="projects">
+                        <img src="images/pictures/js.jpg" alt="">
+                        <h3>Js Website</h3>
+                        <p>How much does a MERN Stack Developer make? The national average salary for a MERN Stack
+                            Developer is $76,284 in United States. Filter by location to see MERN Stack Developer
+                            salaries in your area. Salary estimates are based on 21,030 salaries submitted anonymously
+                            to Glassdoor by MERN Stack Developer employees.</p>
+                    </div>
+                    <div class="projects">
+                        <img src="images/pictures/bank.jpg" alt="">
+                        <h3>Bank Website</h3>
+                        <p>How much does a MERN Stack Developer make? The national average salary for a MERN Stack
+                            Developer is $76,284 in United States. Filter by location to see MERN Stack Developer
+                            salaries in your area. Salary estimates are based on 21,030 salaries submitted anonymously
+                            to Glassdoor by MERN Stack Developer employees.</p>
+                    </div>
+                    <div class="projects">
+                        <img src="images/pictures/school.jpg" alt="">
+                        <h3>School Website</h3>
+                        <p>How much does a MERN Stack Developer make? The national average salary for a MERN Stack
+                            Developer is $76,284 in United States. Filter by location to see MERN Stack Developer
+                            salaries in your area. Salary estimates are based on 21,030 salaries submitted anonymously
+                            to Glassdoor by MERN Stack Developer employees.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- End Project section -->
     </main>
+    <!-- Footer section -->
+    <footer>
+        <div class="container">
+            <div class="footer-content">
+                <h2>Mission <span>2022</span></h2>
+                <p>Hard work, Perseverance, and Determination for 2022</p>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
